# Ambient_Lighting

./: .gitignore  CMakeLists.txt  README.md
include/: helper.h
src/: main.cpp
